--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "type": "project",
     "require": {
         "phug/phug": "^1.4",
-        "altorouter/altorouter": "1.1.0"
+        "altorouter/altorouter": "1.1.0",
+        "erusev/parsedown": "^1.7",
+        "pagerange/metaparsedown": "^1.0"
     },
     "license": "MIT",
     "authors": [
