--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,11 @@
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . index.php [L]
+
+RewriteEngine on
+RewriteCond %{HTTP_HOST} ^www.diceplea.se [NC]
+RewriteRule ^(.*)$ http://diceplea.se/$1 [L,R=301]
+
+RewriteEngine On
+RewriteCond %{HTTP:X-Forwarded-Proto} !https
+RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [R=301,L]
